fix bug z-index in dropđown

--- a/1.UI/css/base/dropdown.css
+++ b/1.UI/css/base/dropdown.css
@@ -74,6 +74,7 @@
         height: 210px;
         transition: 1s;
         background-color: white;
+        z-index: 99;
     }
 
     .dropdown .dropdown-data .dropdown-item {
